--- a/static/css/Dashboard.css
+++ b/static/css/Dashboard.css
@@ -35,7 +35,7 @@ body {
 
 
 .logo {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: math;
     font-size: 32px;
     font-weight: 700;
     color: var(--white);
@@ -62,6 +62,7 @@ body {
     cursor: pointer;
     border-radius: 12px;
     margin-bottom: 10px;
+    font-family: cursive;
     text-decoration: none;
     transition: all 0.3s ease;
     position: relative;
@@ -135,6 +136,7 @@ body {
     padding: 14px 16px;
     text-align: left;
     font-size: 16px;
+    font-family: cursive;
     cursor: pointer;
     border-radius: 12px;
     margin-bottom: 10px;
@@ -547,6 +549,7 @@ body {
     -webkit-background-clip:text;
     color:transparent;
     margin-top:-10px;
+    font-family: cursive;
 }
 
 /* SEARCH INPUT */
@@ -557,6 +560,7 @@ body {
     border-radius:100px;
     border:3px solid #c7d2fe;
     font-size:16px;
+    font-family: cursive;
     color:var(--text);
     background:#f8fafc;
     transition:.3s;
