--- a/static/css/about_us.css
+++ b/static/css/about_us.css
@@ -16,7 +16,7 @@ color: var(--text-dark);
 }
 .fade-in {
 opacity: 0;
-transform: translateY(20px); / Slight move up effect */
+transform: translateY(20px); 
 transition: opacity 1s ease, transform 1s ease;
 }
 
@@ -35,7 +35,7 @@ align-items: center;
 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 .logo {
-font-family: Arial, Helvetica, sans-serif;
+font-family: math;
 font-size: 32px;
 font-weight: 700;
 color: var(--white);
@@ -136,8 +136,7 @@ max-width: 50%;
 }
 
 .about-us h1 {
-font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-Roboto, 'Helvetica Neue', Arial, sans-serif;
+font-family: cursive;
 
 font-size: 40px;  
 font-weight: 700;  
@@ -155,9 +154,7 @@ animation: fadeSlideUp 0.9s ease-out forwards;
 }
 
 .about-us p {
-font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-Roboto, 'Helvetica Neue', Arial, sans-serif;
-
+font-family: cursive;
 font-size: 22px;  
 font-weight: 400;  
 line-height: 1.7;  
@@ -183,7 +180,7 @@ padding-left: 50px;
 
 .illustration {
 width: 100%;
-max-width: 400px; / Adjust size as needed */
+max-width: 400px; 
 height: auto;
 opacity: 0;
 transform: translateY(40px);
@@ -194,6 +191,7 @@ animation: fadeSlideUp 0.9s ease-out forwards;
 .team-heading {
 text-align: center;
 font-size: 36px;
+font-family: cursive;
 margin-top: 50px;
 margin-bottom: 20px;
 opacity: 0;
@@ -296,6 +294,7 @@ animation: fadeSlideUp 0.9s ease-out forwards;
 .name {
 font-size: 20px;
 font-weight: 700;
+font-family: math;
 margin-bottom: 5px;
 opacity: 0;
 transform: translateY(40px);
