--- a/static/css/login_page.css
+++ b/static/css/login_page.css
@@ -26,7 +26,7 @@ body {
 }
 
 .logo {  
-    font-family: Arial, Helvetica, sans-serif;  
+    font-family: math;  
     font-size: 32px;  
     font-weight: 700;  
     color: var(--white);  
@@ -158,7 +158,7 @@ body {
     text-align: center;
     margin-bottom: 60px;
     color: var(--primary-blue);
-    font-family: sans-serif;
+    font-family: math;
 }
 
 /* --- Input Fields --- */
@@ -176,7 +176,7 @@ body {
     outline: none;
     font-size: 14px;
     margin-bottom: 10px;
-    font-family: sans-serif;
+    font-family: math;
     transition: border 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -193,7 +193,7 @@ body {
     font-size: 13px;
     color: #000000;
     font-weight: bold;
-    font-family: sans-serif;
+    font-family: math;
 }
 
 /* --- Show/Hide Button --- */
@@ -239,6 +239,7 @@ body {
     background: linear-gradient(90deg, #00c6ff, #0072ff, #00c6ff);
     background-size: 300% 100%; /* For animated gradient */
     color: #000000;
+    font-family: math;
     text-decoration: none;
     font-weight: bold;
     letter-spacing: 1px;
@@ -390,6 +391,7 @@ body {
   font-size: 16px;
   border-radius: 10px;
   text-align: center;
+  font-family: sans-serif;
   z-index: 9999;
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.35);
   opacity: 0;
