--- a/static/css/registration_page.css
+++ b/static/css/registration_page.css
@@ -36,7 +36,7 @@ body {
 }
 
 .logo {  
-    font-family: Arial, Helvetica, sans-serif;  
+    font-family: math;  
     font-size: 32px;  
     font-weight: 700;  
     color: var(--white);  
@@ -164,7 +164,7 @@ body {
     text-align: center;
     margin-bottom: 60px;
     color: #004b97;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: math;
 }
 
 /* MESSAGE BOX */
@@ -189,7 +189,7 @@ body {
     border-radius: 8px;
     background: rgba(255, 255, 255, 0.15);
     font-size: 14px;
-    font-family: sans-serif;
+    font-family: math;
     outline: none;
     transition: border 0.3s ease, box-shadow 0.3s ease;
 }
@@ -208,7 +208,7 @@ body {
     padding: 0 6px;
     font-size: 12px;
     color: #007bff;
-    font-family: sans-serif;
+    font-family: math;
     font-weight: bold;
 }
 
@@ -226,6 +226,7 @@ body {
     font-size: 12px;
     color: #00c6ff;
     user-select: none;
+    font-family: math;
 }
 
 /* Style for the Alumni/Student selection dropdown */
@@ -280,7 +281,9 @@ body {
     color: #000000;
     text-decoration: none;
     font-weight: bold;
+    font-family: math;
     letter-spacing: 1px;
+    font-size: large;
     border: none;
     position: relative;
     overflow: hidden;
